Source/cmTargetCompileDefinitionsCommand.h
@@ -30,7 +30,6 @@ public:
                    cmExecutionStatus& status) override;
 
 private:
-  void HandleImportedTarget(const std::string& tgt) override;
   void HandleMissingTarget(const std::string& name) override;
 
   bool HandleDirectContent(cmTarget* tgt,
